# colcon-package-information

./: .travis.yml  README.rst  appveyor.yml  setup.cfg  stdeb.cfg
colcon_package_information/package_augmentation/: check_dependency_constraint.py
colcon_package_information/verb/: graph.py  info.py  list.py
test/: spell_check.words  test_check_dependency_constraint.py  test_flake8.py  test_spell_check.py
