[metadata]
name = colcon-package-information
version = attr: colcon_package_information.__version__
url = https://colcon.github.io
download_url = https://github.com/colcon/colcon-package-information/releases
author = Dirk Thomas
author_email = web@dirk-thomas.net
maintainer = Dirk Thomas
maintainer_email = web@dirk-thomas.net
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Plugins
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python
    Topic :: Software Development :: Build Tools
license = Apache License, Version 2.0
description = Extension for colcon to output package information.
keywords = colcon

[options]
install_requires =
  colcon-core
packages = find:
tests_require =
  flake8
  flake8-blind-except
  flake8-builtins
  flake8-class-newline
  flake8-comprehensions
  flake8-deprecated
  flake8-docstrings
  flake8-import-order
  flake8-quotes
  pep8-naming
  pyenchant
  pylint
  pytest
  pytest-cov
zip_safe = true

[options.entry_points]
colcon_core.verb =
    info = colcon_package_information.verb.info:InfoVerb
    list = colcon_package_information.verb.list:ListVerb
